New and create success

--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -8,6 +8,7 @@
     <title>CampGrounds</title>
 </head>
 <h1>All CampGrounds</h1>
+<a href="/campgrounds/new"><button>Add Campground</button></a>
 <ul>
 
     <% for (let campground of campgrounds){ %>
@@ -20,5 +21,3 @@
 </body>
 
 </html>
-c.title
-}
