--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -5,22 +5,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>New Campground</title>
+    <title>Edit Campground</title>
 </head>
 
 <body>
-    <form action="/campgrounds" method="POST">
+    <form action="/campgrounds/<%= campground._id %>?_method=PUT" method="POST">
         <div>
             <label for="title">Title:</label>
-            <input type="text" id="title" name="campground[title]">
+            <input type="text" id="title" name="campground[title]" value="<%= campground.title %> ">
         </div>
         <div>
             <label for="location">Location:</label>
-            <input type="text" id="location" name="campground[location]">
+            <input type="text" id="location" name="campground[location]" value="<%= campground.location%> ">
         </div>
-        <button>ADD CAMPGROUND</button>
+        <button>UPDATE CAMPGROUND</button>
     </form>
-    <a href="/campgrounds"><button>All CampGrounds</button></a>
+    <a href="/campgrounds/<%= campground._id %> "><button>Back To Campground</button></a>
 
 </body>
 
