--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -12,6 +12,7 @@
     <h1><%= campground.title %></h1>
     <h2><%= campground.location %></h2>
     <footer>
+        <a href="/campgrounds/<%= campground._id %>/edit"><button> Edit Campground </button></a>
         <a href="/campgrounds"><button>All Campgrounds</button></a>
     </footer>
 </body>
