--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -13,6 +13,9 @@
     <h2><%= campground.location %></h2>
     <footer>
         <a href="/campgrounds/<%= campground._id %>/edit"><button> Edit Campground </button></a>
+        <form action="/campgrounds/<%= campground._id%>?_method=DELETE" method="POST">
+            <button> Delete Campground </button>
+        </form>
         <a href="/campgrounds"><button>All Campgrounds</button></a>
     </footer>
 </body>
