--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,12 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CampGrounds</title>
-</head>
+<% layout('layouts/boilerplate') %>
 <h1>All CampGrounds</h1>
 <a href="/campgrounds/new"><button>Add Campground</button></a>
 <ul>
@@ -15,9 +7,3 @@
     <li> <a href='/campgrounds/<%= campground._id%>'><%= campground.title%> </a></li>
     <% } %>
 </ul>
-
-<body>
-
-</body>
-
-</html>
