--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,23 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
+<% layout('layouts/boilerplate') %>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= campground.title%></title>
-</head>
-
-<body>
-    <h1><%= campground.title %></h1>
-    <h2><%= campground.location %></h2>
-    <footer>
-        <a href="/campgrounds/<%= campground._id %>/edit"><button> Edit Campground </button></a>
-        <form action="/campgrounds/<%= campground._id%>?_method=DELETE" method="POST">
-            <button> Delete Campground </button>
-        </form>
-        <a href="/campgrounds"><button>All Campgrounds</button></a>
-    </footer>
-</body>
-
-</html>
+<h1><%= campground.title %></h1>
+<h2><%= campground.location %></h2>
+<footer>
+    <a href="/campgrounds/<%= campground._id %>/edit"><button> Edit Campground </button></a>
+    <form action="/campgrounds/<%= campground._id%>?_method=DELETE" method="POST">
+        <button> Delete Campground </button>
+    </form>
+    <a href="/campgrounds"><button>All Campgrounds</button></a>
+</footer>
