--- a/views/error.ejs
+++ b/views/error.ejs
@@ -3,7 +3,7 @@
     <div class="col-6 offset-3">
         <div class="alert alert-danger" role="alert">
             <h4 class="alert-heading"><%= err.message %> </h4>
-            <!-- <p><%= err.stack %></p> -->
+            <p><%= err.stack %></p>
             <hr>
             <p class="mb-0">We just hit a roadblock trying to fetch your data, Please check your data input again.</p>
         </div>
