--- a/views/error.ejs
+++ b/views/error.ejs
@@ -2,10 +2,9 @@
 <div class="row">
     <div class="col-6 offset-3">
         <div class="alert alert-danger" role="alert">
-            <h4 class="alert-heading"><%= err.message %> </h4>
-            <p><%= err.stack %></p>
+            <h4 class="alert-heading overflow-auto"><%= err.message %> </h4>
             <hr>
-            <p class="mb-0">We just hit a roadblock trying to fetch your data, Please check your data input again.</p>
+            <p class="mb-0"><%= err.stack %></p>
         </div>
     </div>
 </div>
