--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -24,7 +24,7 @@
             </div>
         </div>
         <h2>Leave a review</h2>
-        <form action="" class="mb-3">
+        <form method="post" action="/campgrounds/<%= campground._id %>/reviews " class="mb-3">
             <div class="mb-3">
                 <label class="form-label" for="rating">Rating</label>
                 <input type="range" min="1" max="5" class="form-range" id="rating" name="review[rating]">
