validating review on client and server side success

--- a/views/error.ejs
+++ b/views/error.ejs
@@ -4,6 +4,7 @@
         <div class="alert alert-danger" role="alert">
             <h4 class="alert-heading"> <%= err.message %> </h4>
             <hr>
+            <p>We encounter an error</p>
             <p class="mb-0"><%= err.stack %></p>
         </div>
     </div>
