--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -24,14 +24,17 @@
             </div>
         </div>
         <h2>Leave a review</h2>
-        <form method="post" action="/campgrounds/<%= campground._id %>/reviews " class="mb-3">
+        <form method="post" action="/campgrounds/<%= campground._id %>/reviews " class="mb-3 validated-form" novalidate>
             <div class="mb-3">
                 <label class="form-label" for="rating">Rating</label>
                 <input type="range" min="1" max="5" class="form-range" id="rating" name="review[rating]">
             </div>
             <div class="mb-3">
                 <label class="form-label" for="body">Review</label>
-                <textarea class="form-control" name="review[body]" id="body" cols="30" rows="3"></textarea>
+                <textarea class="form-control" name="review[body]" id="body" cols="30" rows="3" required></textarea>
+                <div class="valid-feedback">
+                    Looks Good!
+                </div>
             </div>
             <button class="btn btn-success">Submit</button>
         </form>
