--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,7 +1,7 @@
 <% layout('layouts/boilerplate') %>
 
 <div class="row">
-    <div class="col-6 offset-3">
+    <div class="col-6 ">
         <div class="card mb-3">
             <img src="<%= campground.image %> " class="card-img-top" alt="image">
             <div class="card-body">
@@ -23,6 +23,9 @@
                 <!-- <a href="/campgrounds">All Campgrounds</a> -->
             </div>
         </div>
+
+    </div>
+    <div class="col-6">
         <h2>Leave a review</h2>
         <form method="post" action="/campgrounds/<%= campground._id %>/reviews " class="mb-3 validated-form" novalidate>
             <div class="mb-3">
@@ -40,10 +43,13 @@
         </form>
         <h2>Reviews</h2>
         <% campground.reviews.forEach(review => { %>
-        <div class="mb-3">
-            <p>Rating: <%= review.rating %> </p>
-            <p> <%= review.body %> </p>
+        <div class="card mb-3">
+            <div class="card-body">
+                <h5 class="card-title">Rating: <%= review.rating %> </p>
+                    <p class="card-text"> <%= review.body %> </p>
+            </div>
         </div>
         <% }) %>
     </div>
+</div>
 </div>
