--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -47,6 +47,8 @@
             <div class="card-body">
                 <h5 class="card-title">Rating: <%= review.rating %> </p>
                     <p class="card-text"> <%= review.body %> </p>
+                    <form action="/campgrounds/<%= campground._id %>/reviews/<%= review._id %>?_method=DELETE "
+                        method="post"><button class=" btn btn-sm btn-danger">Delete</button></form>
             </div>
         </div>
         <% }) %>
