--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -48,6 +48,6 @@
             </div>
             <button class="btn btn-success mb-3">UPDATE CAMPGROUND</button>
         </form>
-        <a href="/campgrounds/<%= campground._id %> "><button>Back To Campground</button></a>
+        <a href="/campgrounds/<%= campground._id %> ">Back To Campground</a>
     </div>
 </div>
