--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -29,6 +29,7 @@
 
     </div>
     <div class="col-6">
+        <% if (currentUser) { %>
         <h2>Leave a review</h2>
         <form method="post" action="/campgrounds/<%= campground._id %>/reviews " class="mb-3 validated-form" novalidate>
             <div class="mb-3">
@@ -44,8 +45,9 @@
             </div>
             <button class="btn btn-success">Submit</button>
         </form>
-        <h2>Reviews</h2>
+        <% } %>
         <% campground.reviews.forEach(review => { %>
+        <h2>Reviews</h2>
         <div class="card mb-3">
             <div class="card-body">
                 <h5 class="card-title">Rating: <%= review.rating %> </p>
