--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,7 +1,7 @@
 <% layout('layouts/boilerplate') %>
 <div class="row">
     <div class="col-6 offset-3">
-        <div class="alert alert-danger" role="alert">
+        <div class="alert alert-danger overflow-auto" role="alert">
             <h4 class="alert-heading"> <%= err.message %> </h4>
             <hr>
             <p>We encounter an error</p>
