--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -1,6 +1,6 @@
 <% layout('layouts/boilerplate') %>
 <h1>Register</h1>
-<form class="validated-form" action="/register" method="POST" novalidate>
+<form class="validated-form" action="/register" method="POST">
     <div class="mb-3">
         <label class="form-label" for="username">Username</label>
         <input class="form-control" type="text" id="username" name="username" required>
