--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -33,11 +33,7 @@
         <% if (currentUser) { %>
         <h2>Leave a review</h2>
         <form method="post" action="/campgrounds/<%= campground._id %>/reviews " class="mb-3 validated-form" novalidate>
-            <!-- <div class="mb-3">
-                <label class="form-label" for="rating">Rating</label>
-                <input type="range" min="1" max="5" class="form-range" id="rating" name="review[rating]">
-            </div> -->
-            <fieldset class="starability-growRotate mb-2">
+            <fieldset class="starability-growRotate ">
                 <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="1" checked
                     aria-label="No rating." />
                 <input type="radio" id="first-rate1" name="review[rating]" value="1" />
