--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,6 +1,6 @@
 <% layout('layouts/boilerplate') %>
 <h1>LOGIN</h1>
-<form class="validated-form" action="/login" method="POST" novalidate>
+<form class="validated-form" action="/login" method="POST">
     <div class="mb-3">
         <label class="form-label" for="username">Username</label>
         <input class="form-control" type="text" id="username" name="username" required>
