--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -21,10 +21,6 @@
                 </div>
             </div>
             <div class="mb-3">
-                <label for="image" class="form-label">Add Images</label>
-                <input class="form-control" type="file" name="image" id="image" multiple>
-            </div>
-            <div class="mb-3">
                 <label class="form-label" for="price">Price</label>
                 <div class="input-group">
                     <span class="input-group-text" id="price-label">$</span>
@@ -42,6 +38,19 @@
                 <div class="valid-feedback">
                     Looks Good!
                 </div>
+            </div>
+            <div class="mb-3">
+                <label for="image" class="form-label">Add Images</label>
+                <input class="form-control" type="file" name="image" id="image" multiple>
+            </div>
+            <div class="mb-3">
+                <% campground.images.forEach(function(image, i) { %>
+                <img src="<%= image.url %>" class="img-thumbnail">
+                <div class="form-check-inline">
+                    <input type="checkbox" id="<%=i%>" name="deleteImages[]" value="<%= image.filename%> ">
+                </div>
+                <label for="">Delete</label>
+                <% }) %>
             </div>
             <button class="btn btn-success mb-3">UPDATE CAMPGROUND</button>
         </form>
