--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -34,7 +34,7 @@
             <div class="mb-3">
                 <label class="form-label" for="description">Description</label>
                 <textarea class="form-control" type="text" id="description" name="campground[description]"
-                    required><%= campground.description %></textarea>
+                    required><%=campground.description%></textarea>
                 <div class="valid-feedback">
                     Looks Good!
                 </div>
@@ -45,11 +45,11 @@
             </div>
             <div class="mb-3">
                 <% campground.images.forEach(function(image, i) { %>
-                <img src="<%= image.url %>" class="img-thumbnail">
+                <img src="<%=image.url%>" class="img-thumbnail">
                 <div class="form-check-inline">
-                    <input type="checkbox" id="<%=i%>" name="deleteImages[]" value="<%= image.filename%> ">
+                    <input type="checkbox" id="image-<%=i%>" name="deleteImages[]" value="<%=image.filename%>">
                 </div>
-                <label for="">Delete</label>
+                <label for="image-<%=i%>">Delete</label>
                 <% }) %>
             </div>
             <button class="btn btn-success mb-3">UPDATE CAMPGROUND</button>
