--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -45,7 +45,7 @@
             </div>
             <div class="mb-3">
                 <% campground.images.forEach(function(image, i) { %>
-                <img src="<%=image.url%>" class="img-thumbnail">
+                <img src="<%=image.thumbnail%>" class="img-thumbnail">
                 <div class="form-check-inline">
                     <input type="checkbox" id="image-<%=i%>" name="deleteImages[]" value="<%=image.filename%>">
                 </div>
