--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,8 +1,10 @@
 <% layout('layouts/boilerplate') %>
 <link rel="stylesheet" href="/stylesheets/starability-growRotate.css">
+<link rel="stylesheet" href="/stylesheets/mapbox.css">
 
 <div class="row">
     <div class="col-6 ">
+        <div id="map"></div>
         <div id="campgroundCarousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <% campground.images.forEach((img, i) => { %>
@@ -97,3 +99,9 @@
     </div>
 </div>
 </div>
+
+<script>
+    const mapToken = '<%= process.env.MAPBOX_TOKEN %>';
+</script>
+
+<script src="/javascripts/showpageMap.js"></script>
