--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -4,7 +4,12 @@
 <div class="card mb-3">
     <div class="row">
         <div class="col-md-4">
+            <% if (campground.images.length) { %>
             <img src="<%= campground.images[0].url%> " alt="" class="img-fluid">
+            <% } else {%>
+            <img src="https://res.cloudinary.com/tolucoder/image/upload/v1652355941/sample.jpg" alt=""
+                class="img-fluid">
+            <% } %>
         </div>
         <div class="col-md-8">
             <div class="card-body">
