--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -4,7 +4,6 @@
 
 <div class="row">
     <div class="col-6 ">
-        <div id="map"></div>
         <div id="campgroundCarousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <% campground.images.forEach((img, i) => { %>
@@ -52,6 +51,7 @@
 
     </div>
     <div class="col-6">
+        <div id="map"></div>
         <% if (currentUser) { %>
         <h2>Leave a review</h2>
         <form method="post" action="/campgrounds/<%= campground._id %>/reviews " class="mb-3 validated-form" novalidate>
@@ -101,7 +101,10 @@
 </div>
 
 <script>
-    const mapToken = '<%= process.env.MAPBOX_TOKEN %>';
-</script>
+    const mapToken = '<%=process.env.MAPBOX_TOKEN%>';
+    const campground = '<%-JSON.stringify(campground)%>';
+    const parsedCamp = JSON.parse(campground)
+    // console.log(parsedCamp.geometry.coordinates)
 
+</script>
 <script src="/javascripts/showpageMap.js"></script>
