--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,4 +1,5 @@
 <% layout('layouts/boilerplate') %>
+<div style="width:100%; height: 500px;" id="map"></div>
 <h1>All CampGrounds</h1>
 <% for (let campground of campgrounds){ %>
 <div class="card mb-3">
@@ -23,5 +24,10 @@
         </div>
     </div>
 </div>
-
 <% } %>
+
+<script>
+    const mapToken = '<%=process.env.MAPBOX_TOKEN%>';
+</script>
+
+<script src="javascripts/clusterMap.js"></script>
