--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -2,8 +2,8 @@
 <link rel="stylesheet" href="/stylesheets/starability-growRotate.css">
 <link rel="stylesheet" href="/stylesheets/mapbox.css">
 
-<div class="row">
-    <div class="col-6 ">
+<div class="row container">
+    <div class="col-md-6 ">
         <div id="campgroundCarousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <% campground.images.forEach((img, i) => { %>
@@ -50,7 +50,7 @@
         </div>
 
     </div>
-    <div class="col-6">
+    <div class="col-md-6">
         <div id="map"></div>
         <% if (currentUser) { %>
         <h2>Leave a review</h2>
@@ -103,8 +103,6 @@
 <script>
     const mapToken = '<%=process.env.MAPBOX_TOKEN%>';
     const campground = '<%-JSON.stringify(campground)%>';
-    const parsedCamp = JSON.parse(campground)
-    // console.log(parsedCamp.geometry.coordinates)
-
+    const parsedCamp = JSON.parse(campground);
 </script>
 <script src="/javascripts/showpageMap.js"></script>
