--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -28,6 +28,8 @@
 
 <script>
     const mapToken = '<%=process.env.MAPBOX_TOKEN%>';
+    const campgrounds = '<%-JSON.stringify(campgrounds)%>';
+    const parsedCamps = JSON.parse(campgrounds);
 </script>
 
 <script src="javascripts/clusterMap.js"></script>
