--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,19 +1,28 @@
 <% layout('layouts/boilerplate') %>
-<h1>LOGIN</h1>
-<form class="validated-form" action="/login" method="POST">
-    <div class="mb-3">
-        <label class="form-label" for="username">Username</label>
-        <input class="form-control" type="text" id="username" name="username" required>
-        <div class="valid-feedback">
-            Looks Good!
+<div class="container mt-5 p-2 mx-2">
+    <div class="row">
+        <div class="col-md-6 offset-md-3 shadow py-2">
+            <h4>Login</h4>
+            <form class="validated-form " action="/login" method="POST">
+                <div class="mb-3">
+                    <label class="form-label" for="username">Username</label>
+                    <input class="form-control" type="text" id="username" name="username" autofocus required>
+                    <div class="valid-feedback">
+                        Looks Good!
+                    </div>
+                </div>
+                <div class="mb-3">
+                    <label class="form-label" for="password">Password</label>
+                    <input class="form-control" type="password" id="password" name="password" required>
+                    <div class="valid-feedback">
+                        Looks Good!
+                    </div>
+                </div>
+                <div class="d-grid gap-2 col-6 mx-auto">
+                    <button class="btn btn-success">LOGIN</button>
+                </div>
+            </form>
         </div>
     </div>
-    <div class="mb-3">
-        <label class="form-label" for="password">Password</label>
-        <input class="form-control" type="password" id="password" name="password" required>
-        <div class="valid-feedback">
-            Looks Good!
-        </div>
-    </div>
-    <button class="btn btn-success">LOGIN</button>
-</form>
+
+</div>
