--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,8 +1,8 @@
 <% layout('layouts/boilerplate') %>
-<div style="width:100%; height: 500px;" id="map"></div>
-<h1>All CampGrounds</h1>
+<div id="map" class="cluster-map"></div>
+<h1 class="py-3">All CampGrounds</h1>
 <% for (let campground of campgrounds){ %>
-<div class="card mb-3">
+<div class="card mb-4">
     <div class="row">
         <div class="col-md-4">
             <% if (campground.images.length) { %>
