--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -51,7 +51,7 @@
 
     </div>
     <div class="col-md-6">
-        <div id="map"></div>
+        <div id="map" class="detail-map"></div>
         <% if (currentUser) { %>
         <h2>Leave a review</h2>
         <form method="post" action="/campgrounds/<%= campground._id %>/reviews " class="mb-3 validated-form" novalidate>
