mongo sequel injection success

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -54,7 +54,7 @@
             <p class="lead">Welcome to Yelp Camp <br> Jump right in and explore our many campgrounds. Feel free to share
                 some of your own and comment on others!, Wilderness is not a luxury but necessity of
                 the human spirit.<br> All you need is a Campsite!</p>
-            <a href="/campgrounds" class="btn btn-lg btn-success fw-bold">View Campgrounds</a>
+            <a href="/campgrounds" class="btn btn-lg btn-light fw-bold">View Campgrounds</a>
         </main>
         <footer class="mt-auto text-light-50">
             <p>&copy; 2022 Yelp Camp <span class="text-muted"> Tolucoder +2348132738316</span> </p>
