--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -37,9 +37,9 @@
             </ul>
             <% if (currentUser && campground.author.equals(currentUser._id)) { %>
             <div class="card-body">
-                <a class="card-link btn btn-success" href="/campgrounds/<%= campground._id %>/edit">Edit Campground</a>
+                <a class="card-link btn btn-success" href="/campgrounds/<%= campground._id %>/edit">Edit</a>
                 <form class="d-inline" action="/campgrounds/<%= campground._id%>?_method=DELETE" method="POST">
-                    <button class=" btn btn-danger"> Delete Campground </button>
+                    <button class=" btn btn-danger"> Delete</button>
                 </form>
             </div>
             <% } %>
