--- a/views/error.ejs
+++ b/views/error.ejs
@@ -5,7 +5,9 @@
             <h4 class="alert-heading"> <%= err.message %> </h4>
             <hr>
             <p>We encounter an error</p>
+            <% if (process.env.NODE_ENV !== "production")  { %>
             <p class="mb-0"><%= err.stack %></p>
+            <% } %>
         </div>
     </div>
 </div>
